# fq-filter-reads

./: .pre-commit-config.yaml  Cargo.toml  README.md  test_script.sh
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  main.rs
test/data/: id_list  test.fq
