[package]
name = "fq-filter-reads"
version = "0.1.0"
edition = "2021"
description = "This is a simple program to filter a fastq file with a provided list of IDs."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.1.0"
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
flate2 = "1.0.25"
log = "0.4.17"
rstest = "0.16.0"
